objects/X7S_Onboarding_Topic_Setting__mdt/X7S_Onboarding_Topic_Setting__mdt.object-meta.xml
<CustomObject>
    <label>7S Onboarding Topic Setting</label>
    <pluralLabel>7S Onboarding Topic Settings</pluralLabel>
</CustomObject>