objects/X7S_Onboarding_Topic_Setting__mdt/fields/Max_Topics_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Max_Topics_Per_Page__c</fullName>
    <defaultValue>9</defaultValue>
    <label>Max Topics Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>