objects/X7S_Onboarding_Topic_Setting__mdt/fields/Parent_Label__c.field-meta.xml
<CustomField>
    <fullName>Parent_Label__c</fullName>
    <label>Parent Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>