objects/X7S_Onboarding_Topic_Setting__mdt/fields/Topic_Ids__c.field-meta.xml
<CustomField>
    <fullName>Topic_Ids__c</fullName>
    <inlineHelpText>Please include a comma separated list of topic Ids</inlineHelpText>
    <label>Topic Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>